# gmail-inbox-summary

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  README.md  config.yaml.example  improved-settings.yml  plan.md  pyproject.toml
src/gmail_summarizer/: __init__.py  cache_manager.py  config.py  config_models.py  credential_manager.py  gmail_client.py  html_generator.py  imap_gmail_client.py  llm_summarizer.py  main.py  thread_processor.py
templates/: summary.html
tests/: __init__.py  test_cache_manager.py  test_config_validation.py  test_html_generator.py  test_integration.py  test_llm_summarizer.py  test_thread_processor.py
